checkbox styling fixes CNVS-5112
test plan:
1. visit /courses/:id/quizzes/:id/edit
2. click questions
3. check the box labeled "show question details"
   - observe not messed up radio/checkboxen
4. preview the quiz
   - observe not messed up radio/checkboxen

Reviewed-on: https://gerrit.instructure.com/20223
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Myller de Araujo <myller@instructure.com>
Product-Review: Ryan Florence <ryanf@instructure.com>

--- a/app/stylesheets/quizzes.sass
+++ b/app/stylesheets/quizzes.sass
@@ -485,6 +485,7 @@ div#content
             margin-top: 0
         .answer_label
           :padding-left 0.5em
+          padding-top: 2px
         .answer_label > label > *:first-child, .answer_label > label + *
           :margin-top 0
         .answer_label > label > p:last-child
